feat: add alt attribute to images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <main class="todo">
       <div class="todo__heading todo-heading">
-        <img class="todo-heading__image" src="./eisenhower-matrix.jpg">
+        <img class="todo-heading__image" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix screenshot">
         <a class="todo-heading__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </div>
       <div class="todo__body todo-body">
@@ -26,14 +26,14 @@
             <label class="todo-item__label todo-label">Pay Bills</label>
             <input class="todo-item__input todo-input" type="text">
             <button class="todo-item__btn todo-btn todo-btn--edit">Edit</button>
-            <button class="todo-item__btn todo-btn todo-btn--delete"><img class="todo-btn__image" src="./remove.svg"></button>
+            <button class="todo-item__btn todo-btn todo-btn--delete"><img class="todo-btn__image" src="./remove.svg" alt="remove button image"></button>
           </li> 
           <li class="todo-list__item todo-item edit-mode">
             <input class="todo-item__check todo-check" type="checkbox">
             <label class="todo-item__label todo-label">Go Shopping</label>
             <input class="todo-item__input todo-input" type="text" value="Go Shopping" class="todo-input">
             <button class="todo-item__btn todo-btn todo-btn--edit">Save</button>
-            <button class="todo-item__btn todo-btn todo-btn--delete"><img class="todo-btn__image" src="./remove.svg"></button>
+            <button class="todo-item__btn todo-btn todo-btn--delete"><img class="todo-btn__image" src="./remove.svg" alt="remove button image"></button>
           </li>
         </ul>
         <h3 class="todo-body__title">Completed</h3>
@@ -43,7 +43,7 @@
             <label class="todo-item__label todo-label">See the Doctor</label>
             <input type="text" class="todo-item__input todo-input">
             <button class="todo-item__btn todo-btn todo-btn--edit">Edit</button>
-            <button class="todo-item__btn todo-btn todo-btn--delete"><img class="todo-btn__image" src="./remove.svg"></button>
+            <button class="todo-item__btn todo-btn todo-btn--delete"><img class="todo-btn__image" src="./remove.svg" alt="remove button image"></button>
           </li>
         </ul>
       </div>
