refactor: todo-heading from div to article

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <main class="todo">
-      <div class="todo__heading todo-heading">
+      <article class="todo__heading todo-heading">
         <img class="todo-heading__image" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix screenshot">
         <a class="todo-heading__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-      </div>
+      </article>
       <div class="todo__body todo-body">
         <div class="todo-body__add todo-add">
           <label class="todo-add__label" for="newTask">Add Item</label>
