fix: remove duplicate class for todo-input

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li class="todo-list__item todo-item edit-mode">
             <input class="todo-item__check todo-check" type="checkbox">
             <label class="todo-item__label todo-label">Go Shopping</label>
-            <input class="todo-item__input todo-input" type="text" value="Go Shopping" class="todo-input">
+            <input class="todo-item__input todo-input" type="text" value="Go Shopping">
             <button class="todo-item__btn todo-btn todo-btn--edit">Save</button>
             <button class="todo-item__btn todo-btn todo-btn--delete"><img class="todo-btn__image" src="./remove.svg" alt="remove button image"></button>
           </li>
