fix: return id for todo-input--new to bind it with label

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="todo-body__add todo-add">
           <label class="todo-add__label" for="newTask">Add Item</label>
           <div class="todo-add__wrapper">
-            <input class="todo-add__input todo-input todo-input--new" type="text">
+            <input class="todo-add__input todo-input todo-input--new" type="text" id="newTask">
             <button class="todo-add__btn todo-btn todo-btn--add">Add</button>
           </div>
         </div>
