refactor: add visually-hidden class & h3 heading for article

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <main class="todo">
       <article class="todo__heading todo-heading">
+        <h3 class="visually-hidden">Eisenhower Matrix</h3>
         <img class="todo-heading__image" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix screenshot">
         <a class="todo-heading__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </article>
